# django-navbar

./: .flake8  .pre-commit-config.yaml  README.md  make_migrations.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: license.yml  lint.yml  tests.yml
django_nav_bar/: admin.py  apps.py  context_processors.py  translation.py
django_nav_bar/migrations/: 0006_navigationlogo_delete_navlogo_alter_navigation_type_and_more.py  0008_alter_navigation_options_navigationdropdown_name_de_and_more.py
django_navbar/: admin.py  context_processors.py  models.py  translation.py
django_navbar/locale/de/LC_MESSAGES/: django.po
django_navbar/migrations/: 0001_squashed_0005_navlogo_alter_navigation_type_and_more.py  0002_navigation_name_navigation_order_navigation_type_and_more.py  0003_alter_navigation_url.py  0004_navigationdropdown_and_more.py  0005_navlogo_alter_navigation_type_and_more.py  0007_navigation_name_de_navigation_name_en_and_more.py  0009_navigation_name_af_navigation_name_ar_and_more.py
navigation/: admin.py  apps.py  models.py  translation.py
navigation/migrations/: 0001_initial.py  0003_alter_navigation_url.py  0006_navigationlogo_delete_navlogo_alter_navigation_type_and_more.py  0007_navigation_name_de_navigation_name_en_and_more.py  0008_alter_navigation_options_navigationdropdown_name_de_and_more.py
tests/: settings.py
